ну более-менее допилил секьюрити

--- a/src/webapp/WEB-INF/pages/users/users.html
+++ b/src/webapp/WEB-INF/pages/users/users.html
@@ -35,5 +35,10 @@
                 <a href="/users/save">New User</a>
             </div>
         </div>
+        <div class="container">
+            <form action="/logout" method="POST">
+                <button type="submit">Logout</button>
+            </form>
+        </div>
     </body>
 </html>
