--- a/src/webapp/WEB-INF/pages/users/get.html
+++ b/src/webapp/WEB-INF/pages/users/get.html
@@ -19,5 +19,10 @@
         <input type="submit" value="Update">
         <a href="/users/">Go back</a>
     </form>
+    <div class="container">
+        <form action="/logout" method="POST">
+            <button type="submit">Logout</button>
+        </form>
+    </div>
 </body>
 </html>
