--- a/src/webapp/WEB-INF/pages/login.html
+++ b/src/webapp/WEB-INF/pages/login.html
@@ -10,22 +10,18 @@
     </head>
     <body>
     <div class="container">
-        <h1>Login page</h1>
-        <p th:if="${loginError}" >Wrong user or password</p>
-        <form th:action="@{/login}" method="post">
-            <h2>Please sign in</h2>
-            <label for="j_username">Username</label>:
-            <input type="text" id="j_username" name="j_username"/> <br />
-            <label for="j_password">Password</label>:
-            <input type="password" id="j_password" name="j_password"/> <br />
-            <input type="submit" value="Log in" />
+        <form class="form-signin" method="post" action="/login">
+            <h2 class="form-signin-heading">Login</h2>
+            <p>
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required>
+            </p>
+            <p>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+            </p>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
-        <p><a href="index.html" th:href="@{/index.html}">Back to home page</a></p>
     </div>
-
-
-
-
-
     </body>
 </html>
