обновил всё, что можно было (и все сломалось)

--- a/src/webapp/WEB-INF/pages/user/userPage.html
+++ b/src/webapp/WEB-INF/pages/user/userPage.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-
+<p>User page</p>
+<a href="/users/">Back</a>
+<div class="container">
+    <form action="/logout" method="POST">
+        <button type="submit">Logout</button>
+    </form>
+</div>
 </body>
 </html>
