--- a/src/webapp/WEB-INF/pages/users/get.html
+++ b/src/webapp/WEB-INF/pages/users/get.html
@@ -7,17 +7,21 @@
 </head>
 <body>
 
-    <form action="#" th:action="${'../update/' + getUser.id} " th:object="${getUser}" method="post" >
-        <label for="firstName" >Name</label>
-        <input type="text" th:field="*{firstName}" id="firstName" placeholder="Name">
-        <label for="lastName">Last Name</label>
-        <input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name">
-        <label for="email" class="col-form-label">eMail</label>
-        <input type="text" th:field="*{email}" id="email" placeholder="eMail">
-        <label for="phoneNo" >Phone No</label>
-        <input type="text" th:field="*{telephone}" id="phoneNo" placeholder="phoneNo">
-        <input type="submit" value="Update">
-        <a href="/users/">Go back</a>
+    <form action="#" th:action="${'../update/' + getUser.id}" th:object="${getUser}" method="post" >
+        <p><label for="firstName" >Name</label>
+            <input type="text" th:field="*{firstName}" id="firstName" placeholder="Name"></p>
+        <p><label for="lastName">Last Name</label>
+            <input type="text" th:field="*{lastName}" id="lastName" placeholder="Last Name"></p>
+        <p><label for="email" class="col-form-label">eMail</label>
+            <input type="text" th:field="*{email}" id="email" placeholder="eMail"></p>
+        <p><label for="phoneNo" >Phone No</label>
+            <input type="text" th:field="*{telephone}" id="phoneNo" placeholder="phoneNo"></p>
+        <p><label for="login" >Login</label>
+            <input type="text" th:field="*{login}" id="login" placeholder="login"></p>
+        <p><label for="password" >Password</label>
+            <input type="text" th:field="*{password}" id="password" placeholder="password"></p>
+        <p><input type="submit" value="Update"></p>
+        <p><a href="/users/">Go back</a></p>
     </form>
     <div class="container">
         <form action="/logout" method="POST">
