--- a/src/webapp/WEB-INF/pages/users/users.html
+++ b/src/webapp/WEB-INF/pages/users/users.html
@@ -40,5 +40,8 @@
                 <button type="submit">Logout</button>
             </form>
         </div>
+
+    <a href="../admin/adminPage.html">Admin page</a>
+    <a href="../user/userPage.html">User page</a>
     </body>
 </html>
