Изменил работу с БД с jpa на ЕМ

--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -12,6 +12,9 @@
                 <h1 th:text="${msg}"></h1>
             </th:block>
         </div>
-        <a href="/login"><h3>Link on login</h3></a>
+        <a href="/users/registration"><h3>Registration</h3></a>
+        <a href="/login"><h3>Login</h3></a>
+        <a href="/users/">All Users(Only admin)</a>
+        <a href="user/userPage.html"></a>
     </body>
 </html>
