--- a/src/webapp/WEB-INF/pages/admin/signup.html
+++ b/src/webapp/WEB-INF/pages/admin/signup.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <p>Temporary page</p>
-<!--
-<form action="#" th:action="#{'/admin/addUser'}" th:object="${user}" method="post">
+<form action="#" th:action="@{admin/signup}" th:object="${user}" method="post">
     <label for="name">Name</label>
     <input type="text" th:field="*{name}" id="name" placeholder="Name">
     <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
@@ -21,8 +20,7 @@
     <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
 
     <input type="submit" value="Add User">
-    <a href=/admin/addUser></a>
-</form>-->
-<a href="/admin/users"></a>
+</form>
+<a href="/admin/users">Go back</a>
 </body>
 </html>
