--- a/src/webapp/WEB-INF/pages/admin/signup.html
+++ b/src/webapp/WEB-INF/pages/admin/signup.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>Temporary page</p>
-<form action="#" th:action="@{admin/signup}" th:object="${user}" method="post">
+<form action="#" th:action="@{addUser}" th:object="${user}" method="post">
     <label for="name">Name</label>
     <input type="text" th:field="*{name}" id="name" placeholder="Name">
     <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
